implement basic access authentication for remote miners