@@ -8,7 +8,11 @@ import java.awt.Insets;
 import java.awt.event.ActionEvent;
 import java.awt.event.KeyAdapter;
 import java.awt.event.KeyEvent;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpRequest.BodyPublishers;
+import java.net.http.HttpResponse.BodyHandlers;
 import java.nio.charset.Charset;
 
 import javax.swing.BorderFactory;
@@ -21,18 +25,13 @@ import javax.swing.JScrollPane;
 import javax.swing.JTextField;
 import javax.swing.border.TitledBorder;
 
-import org.apache.commons.io.IOUtils;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.entity.StringEntity;
 import org.jdesktop.swingx.combobox.ListComboBoxModel;
 import org.json.JSONArray;
 import org.json.JSONObject;
-import org.json.JSONTokener;
 
 import hk.zdl.crypto.pearlet.component.miner.remote.MinerGridTitleFont;
 import hk.zdl.crypto.pearlet.ui.UIUtil;
 import hk.zdl.crypto.pearlet.util.Util;
-import hk.zdl.crypto.pearlet.util.WebUtil;
 
 public class MinerPathSettingPanel extends JPanel {
 
@@ -46,17 +45,17 @@ public class MinerPathSettingPanel extends JPanel {
 	private final JList<String> path_list = new JList<>();
 	private final JButton add_btn = new JButton("Add");
 	private final JButton del_btn = new JButton("Del");
-	private String id = "";
-
+	private HttpClient client = HttpClient.newHttpClient();
 	private String basePath = "";
+	private String id = "";
 
 	public MinerPathSettingPanel() {
 		super(new BorderLayout());
 		setBorder(BorderFactory.createTitledBorder(BorderFactory.createEmptyBorder(), "Miner Path", TitledBorder.CENTER, TitledBorder.TOP, MinerGridTitleFont.getFont()));
 		add(new JScrollPane(path_list), BorderLayout.CENTER);
 		var btn_panel = new JPanel(new GridBagLayout());
-		btn_panel.add(add_btn, new GridBagConstraints(0, 0, 1, 1, 0, 0, GridBagConstraints.CENTER,GridBagConstraints.HORIZONTAL, insets_5, 0, 0));
-		btn_panel.add(del_btn, new GridBagConstraints(0, 1, 1, 1, 0, 0, GridBagConstraints.CENTER,GridBagConstraints.HORIZONTAL, insets_5, 0, 0));
+		btn_panel.add(add_btn, new GridBagConstraints(0, 0, 1, 1, 0, 0, GridBagConstraints.CENTER, GridBagConstraints.HORIZONTAL, insets_5, 0, 0));
+		btn_panel.add(del_btn, new GridBagConstraints(0, 1, 1, 1, 0, 0, GridBagConstraints.CENTER, GridBagConstraints.HORIZONTAL, insets_5, 0, 0));
 
 		var panel_1 = new JPanel(new FlowLayout(1, 0, 0));
 		panel_1.add(btn_panel);
@@ -74,20 +73,29 @@ public class MinerPathSettingPanel extends JPanel {
 		});
 	}
 
-	public void setBasePath(String basePath) {
-		this.basePath = basePath;
-	}
-
 	public void setId(String id) {
 		this.id = id;
 	}
 
+	public void setBasePath(String basePath) {
+		this.basePath = basePath;
+	}
+
+	public void setClient(HttpClient client) {
+		this.client = client;
+	}
+
 	@SuppressWarnings("unchecked")
 	public Void refresh_list() throws Exception {
-		var l = new JSONArray(new JSONTokener(new URL(basePath + miner_file_path + "/list?id=" + id).openStream())).toList().stream().map(o -> o.toString()).toList();
-		var i = path_list.getSelectedIndex();
-		path_list.setModel(new ListComboBoxModel<String>(l));
-		path_list.setSelectedIndex(i);
+		var request = HttpRequest.newBuilder().GET().uri(new URI(basePath + miner_file_path + "/list?id=" + id)).build();
+		var response = client.send(request, BodyHandlers.ofString());
+		if (response.statusCode() == 200) {
+			var jarr = new JSONArray(response.body());
+			var l = jarr.toList().stream().map(o -> o.toString()).toList();
+			var i = path_list.getSelectedIndex();
+			path_list.setModel(new ListComboBoxModel<String>(l));
+			path_list.setSelectedIndex(i);
+		}
 		return null;
 	}
 
@@ -120,18 +128,14 @@ public class MinerPathSettingPanel extends JPanel {
 			}
 		}
 		try {
-			var httpPost = new HttpPost(basePath + miner_file_path + "/add");
 			var jobj = new JSONObject();
 			jobj.put("id", id);
 			jobj.put("path", path);
-			httpPost.setEntity(new StringEntity(jobj.toString()));
-			httpPost.setHeader("Content-type", "application/json");
-			var httpclient = WebUtil.getHttpclient();
-			var response = httpclient.execute(httpPost);
-			var text = IOUtils.readLines(response.getEntity().getContent(), Charset.defaultCharset()).get(0);
-			response.getEntity().getContent().close();
-			if (response.getStatusLine().getStatusCode() != 200) {
-				throw new IllegalArgumentException(text);
+			var request = HttpRequest.newBuilder().POST(BodyPublishers.ofString(jobj.toString(), Charset.defaultCharset())).uri(new URI(basePath + miner_file_path + "/add"))
+					.header("Content-type", "application/json").build();
+			var response = client.send(request, BodyHandlers.ofString());
+			if (response.statusCode() != 200) {
+				throw new IllegalArgumentException(response.body());
 			}
 		} catch (Exception x) {
 			JOptionPane.showMessageDialog(getRootPane(), x.getMessage(), x.getClass().getName(), JOptionPane.ERROR_MESSAGE);
@@ -150,15 +154,11 @@ public class MinerPathSettingPanel extends JPanel {
 		int i = JOptionPane.showConfirmDialog(getRootPane(), "Are you sure to delete it?", "", JOptionPane.YES_NO_OPTION, JOptionPane.QUESTION_MESSAGE);
 		if (i == JOptionPane.YES_OPTION) {
 			try {
-				var httpPost = new HttpPost(basePath + miner_file_path + "/del");
-				httpPost.setEntity(new StringEntity(jobj.toString()));
-				httpPost.setHeader("Content-type", "application/json");
-				var httpclient = WebUtil.getHttpclient();
-				var response = httpclient.execute(httpPost);
-				var text = IOUtils.readLines(response.getEntity().getContent(), Charset.defaultCharset()).get(0);
-				response.getEntity().getContent().close();
-				if (response.getStatusLine().getStatusCode() != 200) {
-					throw new IllegalArgumentException(text);
+				var request = HttpRequest.newBuilder().POST(BodyPublishers.ofString(jobj.toString(), Charset.defaultCharset())).uri(new URI(basePath + miner_file_path + "/del"))
+						.header("Content-type", "application/json").build();
+				var response = client.send(request, BodyHandlers.ofString());
+				if (response.statusCode() != 200) {
+					throw new IllegalArgumentException(response.body());
 				}
 			} catch (Exception x) {
 				JOptionPane.showMessageDialog(getRootPane(), x.getMessage(), x.getClass().getName(), JOptionPane.ERROR_MESSAGE);
